# lem-in

./: 1.txt  CMakeLists.txt  Makefile  basic_function.c  find_ways.c  find_ways_0.c  find_ways_1.c  find_ways_2.c  find_ways_3.c  free_all.c  init_room.c  lem_in.h  main.c  map.txt  move_ants.c  output.c  reserve_ways.c  test_maps.txt  validation.c  validation_links.c  validation_rooms.c
libft/: Makefile  ft_error.c  get_next_line.h  libft.h
